tests/negative/gold/interface3-test.gold
tests/negative/interface3-test.toit:6:3: error: Interface members can't have bodies
  foo:
  ^~~
tests/negative/interface3-test.toit:10:8: error: Can't instantiate interface 'A'
  a := A
       ^
Compilation failed
